@@ -1,5 +1,8 @@
 2012-01-06  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-start.el (gnus-activate-group): Document more parameters
+	(bug#9694).
+
 	* gnus-group.el (gnus-group-read-ephemeral-group): Doc clarification
 	(bug#9692).
 
